--- a/public/style.css
+++ b/public/style.css
@@ -167,7 +167,7 @@ h3, h4 {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.95); /* 초기 검정 배경 */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -176,8 +176,9 @@ h3, h4 {
     overflow: hidden;
 
     /* ⭐️ [핵심] 부드러운 전환을 위한 opacity 트랜지션 추가 */
-    transition: opacity 0.5s ease-in-out;
-    opacity: 0; /* JS에서 active 클래스 추가 전에는 투명하게 유지 */
+    transition: opacity 0.3s ease-in-out, background-color 0.1s linear;
+
+    opacity: 0; /* JS로 active 클래스 추가 전에는 투명하게 유지 */
     visibility: hidden;
 }
 .gallery-loading-screen.active {
@@ -216,12 +217,11 @@ h3, h4 {
     aspect-ratio: 1 / 1;
     min-width: 250px;
     width: calc(100vw / 4);
-    border: 1px solid #ddd;
+    border: 1px solid #ddd; /* 프레임은 없지만 롤링 갤러리 이미지는 경계선 유지 */
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     margin-right: 20px;
 }
 
-/* ⭐️ [수정] 로딩 문구 스타일 */
 .loading-overlay-text {
     position: relative;
     background-color: rgba(0, 0, 0, 0.7);
@@ -236,7 +236,6 @@ h3, h4 {
     margin: 0;
 }
 .loading-overlay-text p::after {
-    /* ⭐️ [추가] ... 애니메이션 적용 */
     content: ".";
     animation: dots 1.5s infinite step-start both;
     display: inline-block;
@@ -244,7 +243,6 @@ h3, h4 {
     text-align: left;
     margin-left: 5px;
 }
-
 
 /* QR 코드 스타일 */
 .qr-box {
